# WordsMap

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example_texts/: in.txt  out.txt  out_wf.txt
includes/WordsCountService/: WordsCountService.hh  WordsCountServiceFasterImpl.hh  WordsCountServiceImpl.hh  WordsCountServiceMultithreadImpl.hh
src/: CMakeLists.txt  main.cc
src/WordsCountService/: WordsCountServiceFasterImpl.cc  WordsCountServiceImpl.cc  WordsCountServiceMultithreadImpl.cc
tests/: CMakeLists.txt  WordsCountServiceTest.cc
